syntax = "proto3";

option go_package = "github.com/Alvaroalonsobabbel/proto";

service TetrisService {
    rpc GameSession(stream GameMessage) returns (stream GameMessage) {}
}

message GameMessage {
    string game_id = 1;
    // Tetris tetris = 1;
}

message Tetromino {
  repeated GridRow grid = 1;
  int32 x = 2;
  int32 y = 3;
  int32 ghost_y = 4;
  string shape = 5;
  string rotation_state = 6;
}

message GridRow {
  repeated bool values = 1;
}

message Tetris {
  repeated StackRow stack = 1;
  Tetromino tetromino = 2;
  Tetromino next_tetromino = 3;
  int32 level = 4;
  int32 lines_clear = 5;
}

message StackRow {
  repeated string cells = 1;
}
